--- a/CreArte/wwwroot/css/site.css
+++ b/CreArte/wwwroot/css/site.css
@@ -182,8 +182,8 @@
 
 /* MODIFICAR habilitado */
 .ua-btn-edit:not(.is-disabled) {
-    background: #242259; /* rosa */
-    color: #fff;
+    background: #242259; /* azul oscuro */
+    color: #fff; 
 }
 
 /* Inputs y textareas en solo lectura */
