--- a/CreArte/Views/Niveles/Edit.cshtml
+++ b/CreArte/Views/Niveles/Edit.cshtml
@@ -49,15 +49,16 @@
             <label asp-for="NIVEL_NOMBRE"><strong>Nombre del nivel:</strong></label>
             <input asp-for="NIVEL_NOMBRE" class="form-control" maxlength="30" />
             <span asp-validation-for="NIVEL_NOMBRE" class="text-danger"></span>
-            <div class="ua-help">Máximo 30 caracteres. <span id="cntNombre">0</span>/30</div>
+            <div class="ua-help"><span id="cntNombre">0</span></div>
         </div>
+        <br />
 
         <!-- Descripción -->
         <div class="ua-field" style="margin-top:8px;">
             <label asp-for="NIVEL_DESCRIPCION"><strong>Descripción:</strong></label>
             <textarea asp-for="NIVEL_DESCRIPCION" class="form-control" rows="2" maxlength="30"></textarea>
             <span asp-validation-for="NIVEL_DESCRIPCION" class="text-danger"></span>
-            <div class="ua-help">Opcional. Máximo 30 caracteres. <span id="cntDesc">0</span>/30</div>
+            <div class="ua-help">Opcional <span id="cntDesc">0</span></div>
         </div>
 
         <!-- Acciones -->
