--- a/CreArte/Views/Shared/_Layout.cshtml
+++ b/CreArte/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     <script src="https://cdn.jsdelivr.net/npm/litepicker@2.0.12/dist/litepicker.js"></script>
 
     @* 3) JS del sidebar (usa Bootstrap Collapse) *@
-    <script src="~/js/sidebar.js" asp-append-version="true"></script>
+    @* <script src="~/js/sidebar.js" asp-append-version="true"></script> *@
 
     @* 4) JS globales de tu app *@
     <script src="~/js/PantallaPrincipal.js" asp-append-version="true"></script>
