--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -36,7 +36,11 @@
         { "empleados", "Empleados" },
         { "puestos", "Puestos" },
         { "reportes", "Reportes" },
-        { "areas", "Áreas" }
+        { "areas", "Áreas" },
+        { "niveles", "Niveles" },
+        { "roles", "Roles" },
+        { "categorías", "Categorías" },
+        { "empresa", "Empresa" }
         };
 
         // 4) Si no hay override, usa el mapa por controlador; si no existe, cae a "Bienvenido".
