--- a/CreArte/Views/Areas/Create.cshtml
+++ b/CreArte/Views/Areas/Create.cshtml
@@ -20,7 +20,7 @@
                     <label asp-for="AREA_ID"><strong>Código:</strong></label>
                     <input asp-for="AREA_ID" class="form-control" readonly />
                 </div>
-                <span class="ua-help">Se genera como <b>AR0001</b>, <b>AR0002</b>, ...</span>
+                @* <span class="ua-help">Se genera como <b>AR0001</b>, <b>AR0002</b>, ...</span> *@
                 <span asp-validation-for="AREA_ID" class="text-danger"></span>
             </div>
 
@@ -48,10 +48,11 @@
             <label asp-for="AREA_NOMBRE"><strong>Nombre del área:</strong></label>
             <input asp-for="AREA_NOMBRE" class="form-control" maxlength="100" />
             <span asp-validation-for="AREA_NOMBRE" class="text-danger"></span>
-            <div class="ua-help">Máximo 100 caracteres. <span id="cntNombre">0</span>/100</div>
+            <div class="ua-help"><span id="cntNombre">0</span></div>
         </div>
 
         <!-- Nota simple (opcional) -->
+        </br>
         <div class="ua-note" aria-live="polite">
             <strong>Nota:</strong> Seleccione el nivel y, si lo desea, agregue una descripción breve.
         </div>
@@ -61,7 +62,7 @@
             <div class="ua-field">
                 <label asp-for="NIVEL_ID"><strong>Nivel:</strong></label>
                 <select asp-for="NIVEL_ID" class="form-control" asp-items="Model.Niveles">
-                    <option value="">-- Seleccione un nivel --</option>
+                    <option value="">Seleccione un nivel</option>
                 </select>
                 <span asp-validation-for="NIVEL_ID" class="text-danger"></span>
             </div>
@@ -70,7 +71,7 @@
                 <label asp-for="AREA_DESCRIPCION"><strong>Descripción:</strong></label>
                 <textarea asp-for="AREA_DESCRIPCION" class="form-control" rows="3" maxlength="255"></textarea>
                 <span asp-validation-for="AREA_DESCRIPCION" class="text-danger"></span>
-                <div class="ua-help">Opcional. Máximo 255 caracteres. <span id="cntDesc">0</span>/255</div>
+                <div class="ua-help">Opcional <span id="cntDesc">0</span></div>
             </div>
         </div>
 
