--- a/CreArte/wwwroot/css/site.css
+++ b/CreArte/wwwroot/css/site.css
@@ -155,14 +155,15 @@
     display: inline-block !important;
     padding: 6px 12px !important;
     border-radius: 999px !important;
-    background: #eee !important;
-    color: #555 !important;
+    background: #BF265E !important;
+    color: #fff !important;
     font-weight: 600 !important;
 }
 
     .ua-pill.active {
         background: #C5D930 !important;
-        color: #000;
+        /*color: #000;*/
+        color: black !important;
     }
 
 /* Estado deshabilitado simulado */
