--- a/CreArte/Views/Areas/Edit.cshtml
+++ b/CreArte/Views/Areas/Edit.cshtml
@@ -45,7 +45,7 @@
 
         <!-- Nombre -->
         <div class="ua-field" style="margin-top:12px;">
-            <label asp-for="AREA_NOMBRE"><strong>Nombre del área:</strong></label>
+            <label asp-for="AREA_NOMBRE"><strong>Nombre del área:*</strong></label>
             <input asp-for="AREA_NOMBRE" class="form-control" maxlength="100" />
             <span asp-validation-for="AREA_NOMBRE" class="text-danger"></span>
             <div class="ua-help"><span id="cntNombre">0</span></div>
@@ -60,7 +60,7 @@
         <!-- Nivel + Descripción -->
         <div class="ua-row" style="margin-top:8px;">
             <div class="ua-field">
-                <label asp-for="NIVEL_ID"><strong>Nivel:</strong></label>
+                <label asp-for="NIVEL_ID"><strong>Nivel:*</strong></label>
                 <select asp-for="NIVEL_ID" class="form-control" asp-items="Model.Niveles">
                     <option value="">Seleccione un nivel ↓</option>
                 </select>
@@ -71,7 +71,7 @@
                 <label asp-for="AREA_DESCRIPCION"><strong>Descripción:</strong></label>
                 <textarea asp-for="AREA_DESCRIPCION" class="form-control" rows="3" maxlength="255"></textarea>
                 <span asp-validation-for="AREA_DESCRIPCION" class="text-danger"></span>
-                <div class="ua-help">Opcional <span id="cntDesc">0</span></div>
+                <div class="ua-help"><span id="cntDesc">0</span></div>
             </div>
         </div>
 
