--- a/CreArte/Views/Puestos/Create.cshtml
+++ b/CreArte/Views/Puestos/Create.cshtml
@@ -45,7 +45,7 @@
 
         <!-- Nombre -->
         <div class="ua-field" style="margin-top:12px;">
-            <label asp-for="PUESTO_NOMBRE"><strong>Nombre del puesto:</strong></label>
+            <label asp-for="PUESTO_NOMBRE"><strong>Nombre del puesto:*</strong></label>
             <input asp-for="PUESTO_NOMBRE" class="form-control" maxlength="100" />
             <span asp-validation-for="PUESTO_NOMBRE" class="text-danger"></span>
             <div class="ua-help"><span id="cntNombre">0</span></div>
@@ -59,7 +59,7 @@
         <!-- Área + Nivel + Descripción -->
         <div class="ua-row" style="margin-top:8px;">
             <div class="ua-field">
-                <label asp-for="AREA_ID"><strong>Área:</strong></label>
+                <label asp-for="AREA_ID"><strong>Área:*</strong></label>
                 <select asp-for="AREA_ID" class="form-control" asp-items="Model.Areas">
                     <option value="">Seleccione un área ↓</option>
                 </select>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="ua-field">
-                <label asp-for="NIVEL_ID"><strong>Nivel:</strong></label>
+                <label asp-for="NIVEL_ID"><strong>Nivel:*</strong></label>
                 <select asp-for="NIVEL_ID" class="form-control" asp-items="Model.Niveles">
                     <option value="">Seleccione un nivel ↓</option>
                 </select>
@@ -79,7 +79,7 @@
             <label asp-for="PUESTO_DESCRIPCION"><strong>Descripción:</strong></label>
             <textarea asp-for="PUESTO_DESCRIPCION" class="form-control" rows="3" maxlength="255"></textarea>
             <span asp-validation-for="PUESTO_DESCRIPCION" class="text-danger"></span>
-            <div class="ua-help">Opcional <span id="cntDesc">0</span></div>
+            <div class="ua-help"><span id="cntDesc">0</span></div>
         </div>
 
         <!-- Acciones -->
